Endpoints response refactored