@@ -3,92 +3,69 @@ package com.hubproductsmanagement.controller;
 import com.github.dozermapper.core.DozerBeanMapperBuilder;
 import com.github.dozermapper.core.Mapper;
 import com.hubproductsmanagement.dto.StoreDTO;
+import com.hubproductsmanagement.dto.StoreDeleteResponseDTO;
 import com.hubproductsmanagement.dto.StoreRequestDTO;
 import com.hubproductsmanagement.repo.StoreRepository;
-import com.hubproductsmanagement.service.AuthenticationService;
 import com.hubproductsmanagement.service.StoreService;
+import jakarta.validation.Valid;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
-import jakarta.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 @RestController
 @Slf4j
 @RequestMapping("hub-products-management/stores")
 public class StoreController {
-	private StoreService storeService;
+    private StoreService storeService;
 
-	private AuthenticationService authService;
-	private StoreRepository storeRepository;
-	private Mapper mapper = DozerBeanMapperBuilder.buildDefault();
+    private StoreRepository storeRepository;
+    private Mapper mapper;
 
-	public StoreController(StoreService storeService, StoreRepository storeRepository, AuthenticationService authService) {
-		this.storeService = storeService;
-		this.storeRepository=storeRepository;
-		this.authService = authService;
-	}
+    public StoreController(StoreService storeService, StoreRepository storeRepository) {
+        this.storeService = storeService;
+        this.storeRepository = storeRepository;
+        this.mapper= DozerBeanMapperBuilder.buildDefault();
+    }
 
-	@PostMapping
-	@PreAuthorize("hasAnyRole('ADMINISTRATOR')")
-	public ResponseEntity<StoreDTO> createStore(@RequestBody @Valid StoreRequestDTO storeDto, @RequestHeader HttpHeaders headers) {
-		try {
-			if (!authService.authenticate(headers)) return new ResponseEntity<>(null, HttpStatus.UNAUTHORIZED);
+    @PostMapping
+    @PreAuthorize("hasAnyRole('ADMINISTRATOR')")
+    public StoreDTO createStore(@RequestBody @Valid StoreRequestDTO storeDto, @RequestHeader HttpHeaders headers) {
+        log.info("Request to create product with params: {} ", storeDto);
+        return storeService.createStore(storeDto);
+    }
 
-				return new ResponseEntity<>(storeService.createStore(storeDto),HttpStatus.OK);
+    @PutMapping
+    @PreAuthorize("hasAnyRole('ADMINISTRATOR')")
+    public StoreDTO updateStore(@RequestBody @Valid StoreRequestDTO storeDto, @RequestHeader HttpHeaders headers) {
+        log.info("Request to update store with params: {} ", storeDto);
+        return storeService.updateStore(storeDto);
+    }
 
-		} catch (Exception e) {
-			log.error("An error has occurred while updating product with params: {}, error:{}  "
-					,storeDto, e);
-			return new ResponseEntity<>(null, HttpStatus.SERVICE_UNAVAILABLE);
-		}
-	}
-	
-	@PutMapping
-	@PreAuthorize("hasAnyRole('ADMINISTRATOR')")
-	public ResponseEntity<StoreDTO> updateStore(@RequestBody @Valid StoreRequestDTO storeDto, @RequestHeader HttpHeaders headers) {
-			try {
-				if (!authService.authenticate(headers)) return new ResponseEntity<>(null, HttpStatus.UNAUTHORIZED);
-				if (storeDto.getId() == null) throw new Exception("Store id not provided!");
-				return new ResponseEntity<>(storeService.updateStore(storeDto),HttpStatus.OK);
+    @GetMapping("/{id}")
+    public StoreDTO getStore(@PathVariable Long id) {
+        log.info("Request to select store with id: {} ", id);
+        return storeService.getStore(id);
+    }
 
-			} catch (Exception e) {
-				log.error("An error has occurred while updating store with params: {}, error:{}  "
-						,storeDto, e);
-				return new ResponseEntity<>(null, HttpStatus.SERVICE_UNAVAILABLE);
-			}
-	}
+    @DeleteMapping("/{id}")
+    @PreAuthorize("hasAnyRole('ADMINISTRATOR')")
+    public StoreDeleteResponseDTO deleteStore(@PathVariable Long id, @RequestHeader HttpHeaders headers) {
+        log.info("Request to delete store with id: {} ", id);
+        return storeService.deleteStore(id);
+    }
 
-	@GetMapping("/{id}")
-	public StoreDTO getStore(@PathVariable Long id) {
-		return storeService.getStore(id);
-	}
-
-	@DeleteMapping("/{id}")
-	@PreAuthorize("hasAnyRole('ADMINISTRATOR')")
-	public ResponseEntity deleteStore(@PathVariable Long id, @RequestHeader HttpHeaders headers) {
-		if (!authService.authenticate(headers)) return new ResponseEntity<>(null, HttpStatus.UNAUTHORIZED);
-		storeService.deleteStore(id);
-		return new ResponseEntity<>(id +" deleted", HttpStatus.OK);
-	}
-	
-	@GetMapping("/all/{ids}")
-	public List<StoreDTO> getStoresByIds(@PathVariable List<Long> ids){
-
-		return storeRepository.findAllById(ids)
-				.stream()				
+    @GetMapping("/all/{ids}")
+    public List<StoreDTO> getStoresByIds(@PathVariable List<Long> ids) {
+        log.info("Request to select stores with ids: {} ", ids);
+        return storeRepository.findAllById(ids)
+                .stream()
                 .map(storeEntity -> mapper.map(storeEntity, StoreDTO.class))
-                .collect(Collectors.toList());
+                .toList();
+    }
 
-		
-	}
-	
-	
 
 }
